[gd_scene load_steps=10 format=3 uid="uid://bw6uottepvapf"]

[ext_resource type="Script" uid="uid://bfnd6pryvt2nx" path="res://scenes/login/login.gd" id="1_74lrb"]
[ext_resource type="Theme" uid="uid://cb3koaxnpyonm" path="res://meta/themes/primary.theme" id="1_d7qrr"]
[ext_resource type="Texture2D" uid="uid://b0nx2mo3k2reg" path="res://meta/icons/default_user_icon.svg" id="2_1qgm1"]
[ext_resource type="Texture2D" uid="uid://5frmublhiiwu" path="res://meta/icons/edit_icon.svg" id="4_0msd8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_to7om"]
bg_color = Color(0.172549, 0.168627, 0.160784, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0msd8"]
bg_color = Color(0.184314, 0.180392, 0.172549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.254902, 0.25098, 0.243137, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_74lrb"]
bg_color = Color(0.27451, 0.27451, 0.270588, 1)
corner_radius_top_left = 9999
corner_radius_top_right = 9999
corner_radius_bottom_right = 9999
corner_radius_bottom_left = 9999

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0msd8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wc656"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.246889, 0.246889, 0.24365, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.39, 0.39, 0.3861, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="Login" type="PanelContainer" node_paths=PackedStringArray("username_edit", "user_icon", "user_id", "about_edit", "user_pfp_dialog", "http")]
custom_minimum_size = Vector2(200, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_to7om")
script = ExtResource("1_74lrb")
username_edit = NodePath("MarginContainer/VBoxContainer/UserCustomizePanel/VBoxContainer/UsernameEditContainer/UsernameEdit")
user_icon = NodePath("MarginContainer/VBoxContainer/UserCustomizePanel/VBoxContainer/UserProfileBG/UserPFPCrop/UserIcon")
user_id = NodePath("MarginContainer/VBoxContainer/UserCustomizePanel/VBoxContainer/UserID")
about_edit = NodePath("MarginContainer/VBoxContainer/UserCustomizePanel/VBoxContainer/AboutEdit")
user_pfp_dialog = NodePath("UserPFPDialog")
http = NodePath("HTTPRequest")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 160
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 160
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="LoginLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_d7qrr")
theme_override_font_sizes/font_size = 80
text = "Create Your Profile"
horizontal_alignment = 1

[node name="UserCustomizePanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_0msd8")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/UserCustomizePanel"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="UserProfileBG" type="PanelContainer" parent="MarginContainer/VBoxContainer/UserCustomizePanel/VBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_74lrb")

[node name="UserPFPCrop" type="PanelContainer" parent="MarginContainer/VBoxContainer/UserCustomizePanel/VBoxContainer/UserProfileBG"]
clip_children = 2
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_74lrb")

[node name="UserIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/UserCustomizePanel/VBoxContainer/UserProfileBG/UserPFPCrop"]
layout_mode = 2
texture = ExtResource("2_1qgm1")
expand_mode = 1

[node name="PFPURLChanged" type="LineEdit" parent="MarginContainer/VBoxContainer/UserCustomizePanel/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_d7qrr")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_0msd8")
placeholder_text = "URL"
alignment = 1
max_length = 200
flat = true

[node name="UsernameEditContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/UserCustomizePanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="UsernameEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/UserCustomizePanel/VBoxContainer/UsernameEditContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_d7qrr")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_0msd8")
text = "Peer"
alignment = 1
max_length = 30
expand_to_text_length = true
flat = true

[node name="EditIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/UserCustomizePanel/VBoxContainer/UsernameEditContainer/UsernameEdit"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1.0
offset_top = -16.0
offset_right = 51.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("4_0msd8")
expand_mode = 1
stretch_mode = 5

[node name="UserID" type="Label" parent="MarginContainer/VBoxContainer/UserCustomizePanel/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0.392157)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_d7qrr")
theme_override_font_sizes/font_size = 25
text = "#100000000"

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/UserCustomizePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="AboutEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/UserCustomizePanel/VBoxContainer"]
custom_minimum_size = Vector2(800, 150)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_wc656")
text = "Hi! I'm a new peer!"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="CreateProfileButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_d7qrr")
theme_override_font_sizes/font_size = 36
text = "Create Profile"

[node name="UserPFPDialog" type="FileDialog" parent="."]
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.png", "*.jpg", "*.svg")
use_native_dialog = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="text_changed" from="MarginContainer/VBoxContainer/UserCustomizePanel/VBoxContainer/PFPURLChanged" to="." method="_on_pfpurl_changed_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CreateProfileButton" to="." method="_on_create_profile_button_pressed"]
[connection signal="file_selected" from="UserPFPDialog" to="." method="_on_user_pfp_dialog_file_selected"]
